chore: config docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   app:
     build: .
     container_name: nest-api-container
-    entrypoint: sh -c "dockerize -wait tcp://postgres:5432 -timeout 30s npm start"
+    entrypoint: sh -c "dockerize -wait tcp://postgres:5432 -timeout 30s && npm run start:dev"
     volumes:
       - .:/home/node/app
       - /home/node/app/node_modules
